[tool.poetry]
name = "ton-tourney-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.2.0"
discord = "^1.0.1"
pytz = "^2021.1"
flask = "^1.1.2"
more-itertools = "^8.7.0"
openpyxl = "^3.0.7"
pandas = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
