[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["iamksm <<>>"]
description = ""
name = "repl_python3_Ton-Tourney-Bot"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
replit = "^3.2.4"
discord = "^1.7.3"
pandas = "^1.3.5"
black = "^22.1.0"
isort = "^5.10.1"
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.3"
more-itertools = "^8.13.0"
[tool.poetry.dev-dependencies]
